<resources>
    <string name="app_name">Treepolis</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Welcome</string>

    <!-- Welcome -->
    <string name="signup_welcome">Welcome to\nTreepolis</string>
    <string name="create_or_login_account">Don\'t have an account yet?</string>
    <string name="create_account">Create!</string>
    <string name="hint_login_username">User Name</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_confirm_password">Confirm Password</string>
    <string name="welcome_or">Or</string>
    <string name="login_button">Log In</string>
    <string name="login_progress">Login...</string>

    <!-- Signup -->
    <string name="signup_title">Create Account</string>
    <string name="signup">Sign Up</string>
    <string name="field_error_empty">Field is empty</string>
    <string name="field_error_password_diferent">Password does not match</string>
    <string name="field_error_email_invalid">Invalid Email</string>
    <string name="signup_error_unknown">Can not create account at this moment, please try again later.</string>
    <string name="signup_error_email_taken">The Email address is already taken, please try with a different one.</string>
    <string name="signup_error_email_invalid">The Email address is invalid, please try again.</string>
    <string name="signup_error_username_taken">The user name is already taken, please try again with a different one.</string>
    <string name="signup_error_unable_to_login">Can not access your account at this moment, please try again later.</string>
    <string name="signup_progress">Creating account...</string>
    <string name="signup_error">Signup Error</string>
    <string name="dialog_button_ok">OK</string>

    <!-- Home -->
    <string name="title_activity_home">Treepolis</string>
    <string name="title_section1">Section 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="login_error_title">Login Error</string>
    <string name="unknown_error">Unknown error. Please try again later.</string>
    <string name="login_error_user_not_found">Please check user name and password and try again.</string>
    <string name="drawer_menu_option_logout">Logout</string>
    <string name="button_checkin_tree">Check Tree</string>
    <string name="home_no_trees_around">No trees found around you. Be the first in check a new tree here!</string>

    <!-- Check in tree -->
    <string name="submit_tree">Submit</string>
    <string name="title_activity_checkin_tree">Check in</string>
    <string name="checkTreePicsTitle">Tap to add pictures of the tree, leaf and fruit</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_error_taking_picture">Error taking the picture.</string>
    <string name="dialog_message_error_processing_wiki_tree_info">Error processing tree info from Wikipedia. Please try again later.</string>
    <string name="checkin_tree_name">Name:</string>
    <string name="checkin_tree_description">Description:</string>
    <string name="not_known_tree">I don\'t know this tree</string>
    <string name="known_tree">Let me identify this tree</string>
    <string name="checkTreeInfoTitle">Add tree name</string>
    <string name="checkTreeMapTitle">Be sure you are close the tree and location accuracy is highest possible</string>
    <string name="wiki_select_tree">Select this tree</string>

    <!-- Backend -->
    <string name="firebase_treepolis_url">https://treepolis.firebaseio.com</string>

    <string name="wiki_trees_list_url">https://en.m.wikipedia.org/wiki/List_of_trees_and_shrubs_by_taxonomic_family</string>
    <string name="wiki_trees_json">wikitrees</string>
    <string name="wikitrees_info_loading_error">Error loading trees info, please try again later.</string>
    <string name="wikitrees_info_loading_progress">Loading Wiki trees info...</string>
    <string name="find_tree">Find tree in Wikipedia</string>
    <string name="dialog_message_error_need_add_pictures">You need to add at least a picture of the tree and leaf.</string>
    <string name="dialog_message_error_need_add_name">You need to add the tree name before submit it.</string>
    <string name="dialog_message_error_location_not_accurated">Your location accuracy needs to be better. Try to switch on your GPS and Wifi.</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="action_submit_tree">Submit tree</string>
    <string name="confirm_submit_tree">Submit this tree with the information provided?</string>

</resources>
