<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quoders.apps.android.treepolis.ui.welcome.WelcomeActivity">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/textViewWelcomeAppName"
        android:textColor="@color/primary_dark"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/signup_welcome"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWelcomeAppName"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextUserNameLogin"
            android:inputType="text"
            android:hint="@string/hint_login_username" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textInputLayoutUserName" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordLogin"
            android:hint="@string/hint_login_password"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_below="@id/textInputLayoutPassword"
        android:text="@string/login_button"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_login" />

    <TextView
        android:id="@+id/textViewWelcomeOr"
        android:layout_width="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:text="@string/welcome_or"/>

    <Button
        android:id="@+id/loginFacebookButton"
        android:layout_below="@id/textViewWelcomeOr"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_login_facebook" />

    <TextView
        android:id="@+id/textViewCreateOrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:fontFamily="sans-serif-thin"
        android:textSize="18sp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/loginFacebookButton"
        android:text="@string/create_or_login_account"/>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:layout_toRightOf="@+id/textViewCreateOrLogin"
        android:layout_toEndOf="@+id/textViewCreateOrLogin"
        android:layout_alignBaseline="@+id/textViewCreateOrLogin"
        android:text="@string/create_account"/>




</RelativeLayout>
